refactoring di alcune classi service per la creazione degli oggetti